# eakv

./: .gitignore  HOWTO.md  Makefile  README.md  build_kernels.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_accuracy.py  bench_attention.py  bench_libeakv.c  bench_roundtrip.py
docs/plans/: 2026-03-09-eakv-design.md  2026-03-09-eakv-implementation.md  2026-03-09-fused-attention-design.md  2026-03-09-fused-attention-plan.md  2026-03-09-libeakv-design.md  2026-03-09-libeakv-implementation.md  2026-03-10-append-and-llama-bridge-design.md  2026-03-10-llama-benchmark-results.md  2026-03-10-llama-integration-design.md  2026-03-10-llama-integration-plan.md
examples/: offload_demo.c
include/: eakv.h  eakv_ggml.h  eakv_llama.h
kernels/: dequantize.ea  dequantize_avx2.ea  dequantize_avx512.ea  dequantize_simd.ea  dequantize_u8.ea  fused_attention.ea  fused_k_score.ea  fused_k_score_64.ea  fused_k_score_gqa.ea  fused_k_score_gqa_64.ea  fused_v_sum.ea  fused_v_sum_64.ea  quantize.ea  quantize_simd.ea  validate.ea  validate.ea.json
patch/: apply.sh
src/: attention.c  cache.c  cli.c  ggml_type.c  internal.h  io.c  llama_bridge.c
src/eakv/: __init__.py  _attention.py  _bundle.py  _dequantize_bind.py  _dequantize_u8_bind.py  _dispatch.py  _io.py  _ops.py  _quantize.py  _quantize_bind.py  _quantize_simd_bind.py  _restore.py  _validate_bind.py  cli.py
tests/: test_append.c  test_attention.py  test_attention_c.c  test_cache.c  test_checkpoint.c  test_e2e.c  test_ggml_type.c  test_harness.h  test_integration.py  test_io.py  test_io_c.c  test_llama_bridge.c  test_llama_kv.c  test_roundtrip.py  test_validate.py
