[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eakv"
version = "0.1.0"
description = "Fast Q4 KV cache quantization and restore for LLM inference"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
compress = ["zstandard>=0.20"]

[project.scripts]
eakv = "eakv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eakv = ["lib/*.so", "lib/*.dll", "py.typed"]
