[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eakv"
version = "0.1.0"
description = "Fast Q4 KV cache quantization and restore for LLM inference, powered by Ea SIMD kernels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Peter Lukka" }]
keywords = ["kv-cache", "quantization", "llm", "inference", "simd", "avx512", "attention"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
compress = ["zstandard>=0.20"]

[project.scripts]
eakv = "eakv.cli:main"

[project.urls]
Homepage = "https://github.com/petlukk/eakv"
Repository = "https://github.com/petlukk/eakv"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eakv = ["lib/*.so", "lib/*.dll", "py.typed"]
